# scholarmetrics

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  metrics.rst  reference.rst  requirements.txt  scholarmetrics.rst
scholarmetrics/: __init__.py  _version.py  author_metrics.py  metrics.py  scholarmetrics.py  startup.py
scholarmetrics/tests/: __init__.py  test_authormetrics.py  test_metrics.py  test_scholarmetrics.py
