[metadata]
name = scholarmetrics
author = Michael E. Rose
author-email = Michael.Ernst.Rose@gmail.com
maintainer = Michael E. Rose
maintainer-email = Michael.Ernst.Rose@gmail.com
summary = Compute scholarly metrics in Python with Pandas and NumPy Edit
description-file = README.rst
home-page = https://scholarmetrics.readthedocs.io/en/latest/
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    scholarmetrics
    metrics

[files]
packages =
    scholarmetrics

[bdist_wheel]
universal=1
